# qt-test

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  meson.build
